--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "react-native-screens": "~4.16.0",
     "react-native-toast-message": "^2.3.3"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "^19.2.7",
+    "typescript": "^5.9.3"
+  }
 }
